/* Derived terms */ Split-up the long derived terms list into two parts <plum#16987191>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -31,66 +31,87 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * {{sense|edible fleshy stone of Prunus mume}} [[ume]]
 
 =====Derived terms=====
-{{rel-top4|Derived terms}}
+{{rel-top4|Derived terms with proper nouns}}
 * [[American black plum]]
 * [[Assyrian plum]]
 * [[Australian plum]]
-* [[apple-plum]]
-* [[beach plum]], [[beach-plum]]
-* [[black plum of Illawarra]]
-* [[blood plum]]
-* the [[bloom of the plum]], the [[blue of the plum]]
 * [[Brazilian plum]]
-* [[bullace plum]]
 * [[Canada plum]]
-* [[cherry plum]]
-* [[chickasaw plum]]
-* [[cocoa plum]], [[coco plum]], [[cocoplum]]
-* [[damascene plum]], [[damask plum]], [[damson plum]]
 * [[Darling plum]]
-* [[date plum]]
-* [[dried plum]]<!--US advertisers' term for "prune", used with the intention of avoiding the negative connotations of that word-->
-* [[date-plum]]
-* [[East Indian plum]]
-* [[gingerbread plum]]
-* [[golden plum]]
-* [[gopher plum]]
-* [[gray plum]], [[grey plum]]
 {{rel-mid4}}
-* [[ground plum]]
+* [[East Indian plum]]
 * [[Guinea plum]]
-* [[hog-plum]]
-* [[horse-plum]]
 * [[Indian plum]]
 * [[Jamaica plum]]
 * [[Japanese plum]]
 * [[Japan plum]]
+{{rel-mid4}}
+* [[Morocco plum]]
+* [[Natal plum]]
+* [[Orleans plum]]
+* [[Port Arthur plum]]
+* [[Queensland plum]]
+* [[Satsuma plum]]
+{{rel-mid4}}
+* [[Spanish plum]]
+* [[Tasmanian plum]]
+* [[Victoria plum]]
+* [[yellow Spanish plum]]
+{{rel-bottom}}
+
+{{rel-top4|Other derived terms}}
+* [[apple-plum]]
+* [[beach plum]], [[beach-plum]]
+* [[black plum of Illawarra]]
+* [[blood plum]]
+* [[bullace plum]]
+* [[cherry plum]]
+* [[chickasaw plum]]
+* [[cocoa plum]], [[coco plum]], [[cocoplum]]
+* [[damascene plum]], [[damask plum]], [[damson plum]]
+* [[date plum]]
+* [[date-plum]]
+* [[dried plum]]<!--US advertisers' term for "prune", used with the intention of avoiding the negative connotations of that word-->
+* [[gingerbread plum]]
+* [[golden plum]]
+* [[gopher plum]]
+* [[gray plum]], [[grey plum]]
+* [[ground plum]]
+* [[hog-plum]]
+{{rel-mid4}}
+* [[horse-plum]]
 * [[leaf curling plum aphid]]
 * [[marmalade plum]]
-* [[Morocco plum]]
 * [[mountain plum]]
 * [[muscle plum]]
 * [[mussel plum]]
 * [[myrobalan plum]]
 * [[myrobella plum]]
-* [[Natal plum]]
 * [[olive-plum]]
-* [[Orleans plum]]
 * [[partridge plum]]
 * [[pear-plum]]
 * [[persimmon-plum]]
 * [[pigeon-plum]]
-* [[plum-bird]], [[plum bird]]
-{{rel-mid4}}
-* [[plum-blossom]]
 * [[plum brandy]]
+* [[plum curculio]]
+* [[plum peach]]
+* [[plum pox]]
+* [[plum pudding]], [[plum-pudding]]
+* [[plum rains]]
+* [[plum sauce]]
+{{rel-mid4}}
+* [[plum tomato]]
+* [[plum tree]]
+* [[plum weevil]]
+* [[plum wine]]
+* [[plum-bird]], [[plum bird]]
+* [[plum-blossom]]
 * [[plum-broth]]
 * [[plum-budder]], [[plum budder]]
 * [[plum-cake]]
 * [[plum-color]], [[plum-colour]]
 * [[plum-colored]], [[plum-coloured]]
 * [[plumcot]]
-* [[plum curculio]]
 * [[plum-damas]], [[plumdamas]], [[plum-damis]]
 * [[plum-dough]], [[plum-duff]]
 * [[plum-fir]]
@@ -98,39 +119,25 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[plum-in-the-mouth]]
 * [[plumless]]
 * [[plummy]]
-* [[plum peach]]
+{{rel-mid4}}
 * [[plum-pie]]
 * [[plum-pockets]]
 * [[plum-porridge]]
 * [[plum-pottage]]
-* [[plum pox]]
-* [[plum pudding]], [[plum-pudding]]
-* [[plum rains]]
-{{rel-mid4}}
 * [[plumrock]]
-* [[plum sauce]]
 * [[plum-stone]]
-* [[plum tomato]]
-* [[plum tree]]
-* [[plum weevil]]
-* [[plum wine]]
 * [[pluot]]
-* [[Port Arthur plum]]
-* [[Queensland plum]]
 * [[sapodilla plum]]
-* [[Satsuma plum]]
 * [[sebesten plum]]
 * [[slugplum]]
-* [[Spanish plum]]
 * [[sugar plum]], [[sugar-plum]], [[sugarplum]]
 * [[tamarind plum]]
-* [[Tasmanian plum]]
+* the [[bloom of the plum]], the [[blue of the plum]]
 * [[urucuri plum]]
-* [[Victoria plum]]
 * [[wheat-plum]]
 * [[wild plum]]
+* [[yellow plum]]
 * [[yellowgage plum]]
-* [[yellow plum]], [[yellow Spanish plum]]
 {{rel-bottom}}
 
 =====Translations=====
