--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -326,7 +326,7 @@ From {{etyl|enm}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}} {{term|brycgia
 {{trans-bottom}}
 
 ===Etymology 3===
-Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably from {{etyl|tr}} {{term|bir|lang=tr}}-{{term|üç|lang=tr}}, "one-three". <ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
+Name of an older card game ''biritch'', probably {{etyl|ru}} {{term|бирич|lang=ru|tr=biríč}} - OED, or probably from {{etyl|tr}} {{term|bir|lang=tr}}-{{term|üç|lang=tr}}, "one-three". <ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
 
 ====Noun====
 {{en-noun|-}}
