--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -203,6 +203,8 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 ##*: Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
 # To seize hold of.
 ## {{transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13th c.}}
+##*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.2:
+##*:Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight''' [...]. 
 ##: ''I '''caught''' her by the arm and turned her to face me.''
 ## {{transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14th c.}}
 ##: ''I have to stop for a moment and '''catch''' my breath.''
