--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -293,6 +293,11 @@
 * Telugu: [[తిన్నగా]] (tinnagaa), [[సూటిగా]] (sootigaa)
 {{trans-bottom}}
 
+{{trans-top|of movement or travel, directly; without pause, delay or detour}}
+* Portuguese: {{t|pt|direto}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====See also====
 * [[straight up]]
 * [[damn straight]]
