--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -17,6 +17,7 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{te
 # ''a (typically male) [[given name]]'', sometimes used as a generic or stereotypical Chinese male name, like [[John]] in English
 
 ====References====
+<references/>
 * {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
 
 ==Cantonese==
