/* Middle High German */ <olive#16997996>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -242,12 +242,12 @@
 ==Middle High German==
 
 ===Etymology===
-From {{etyl|la|gmh}} {{term|oliva|lang=la}}
+From {{etyl|la|gmh}} {{term|oliva|lang=la}}.
 
 ===Noun===
 {{gmh-noun|head=olīve|g=f}}
 
-# The [[olive]]
+# {{l|en|olive}}
 
 [[Category:gmh:Fruits]]
 
