--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -46,9 +46,10 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * Icelandic: {{t|is|jakki|m}}, {{t|is|frakki|m}}
 * Indonesian: {{t+|id|mantel|xs=Indonesian}}
 * Irish: {{t-|ga|cóta|m|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|mantello|m}}
+{{trans-mid}}
 * Japanese: {{t-|ja|コート|tr=kōto}}, {{t|ja|外套|tr=がいとう, gaitō}}
+* Jèrriais: {{tø|roa-jer|câsaque|f}}
 * Korean: {{t|ko|코트|tr=koteu}}
 * Luhya: {{tø|luy|kumuchosi}}
 * Malay: {{t|ms|kot}}
