poker slang (am really surprised we don't have this) <brick#17002886>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -28,6 +28,8 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 # {{informal}} A [[power brick]]; an external [[power supply]] consisting of a small [[box]] with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in another power plug.
 # {{technology|slang}} An electronic device, especially a heavy box-shaped one, that has become non-functional or obsolete.
 # {{context|firearms}} a carton of 500 rimfire cartridges, which forms the approximate size and shape of a brick.
+# {{poker slang}} A [[community card]] (usually the [[turn]] or the [[river]]) which does not improve a player's hand.
+#: {{usex|The two of clubs was a complete '''brick''' on the river}}
 
 ====Derived terms====
 {{rel-top3|terms derived from brick (noun)}}
@@ -56,7 +58,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 {{trans-top|hardened block used for building}}
 * Afrikaans: {{t-|af|baksteen|xs=Afrikaans}}
 * Akkadian: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
-* Arabic: {{t|ar|طوبة|f|tr=ṭūba}},  {{t|ar|لبنة|f|tr=lábina}}, {{t|ar|قرميد|m|tr=qarmīn|sc=Arab}}
+* Arabic: {{t|ar|طوبة|f|tr=ṭūba}}, {{t|ar|لبنة|f|tr=lábina}}, {{t|ar|قرميد|m|tr=qarmīn|sc=Arab}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * Basque: [[adreilu]]
 * Belarusian: {{t|be|цэгла|f|tr=céhla|sc=Cyrl}}
@@ -64,7 +66,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Bulgarian: {{t+|bg|тухла|f|tr=túhla|sc=Cyrl}}
 * Catalan: [[maó]]
 * Chinese:
-*: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}},  {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+*: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Croatian: {{t-|hr|cigla|f}}
 * Czech: {{t-|cs|cihla|f}}
 * Danish: {{t|da|mursten|c}}
@@ -79,7 +81,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Greek: {{t|el|τούβλο|n|tr=toúvlo}}
 * Hebrew: {{t+|he|לבנה|f|tr=l'véna|sc=Hebr}}
 * Hungarian: {{t+|hu|tégla}}
-* Icelandic: {{t|is|múrsteinn|m}}, {{t|is|tígulsteinn|m}} {{qualifier|rare}}, {{t|is|leirsteinn|m}}  {{qualifier|rare}}
+* Icelandic: {{t|is|múrsteinn|m}}, {{t|is|tígulsteinn|m}} {{qualifier|rare}}, {{t|is|leirsteinn|m}} {{qualifier|rare}}
 * Ido: {{t+|io|briko|xs=Ido}}
 * Indonesian: {{t-|id|batu bata|xs=Indonesian}}
 * Irish: {{t|ga|bríce|m}}
@@ -125,7 +127,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * Bulgarian: {{t|bg|тухли|p}}
 * Chinese:
-*: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}},  {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+*: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t|cs|cihla}}
 * Danish: {{t|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen}}, {{t-|nl|bakstenen}}
@@ -157,7 +159,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * {{trreq|ar}}
 * {{trreq|hy}}
 * Chinese:
-*: Mandarin: {{t|zh|砖头|tr=zhuāntóu |sc=Hani}}
+*: Mandarin: {{t|zh|砖头|tr=zhuāntóu|sc=Hani}}
 * {{trreq|cs}}
 * {{trreq|nl}}
 * {{trreq|fr}}
@@ -260,7 +262,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 ==French==
 
 ===Etymology===
-From {{etyl|en|fr}} {{term|brig}}.
+From {{etyl|en|fr}} {{term|brig|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/bʁik/|lang=fr}}
