--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -21,7 +21,7 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 ====Usage notes====
 * The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].  (Tautologies do have their place, but use ''etc.'' in this context with care.)
 
-* Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
+* Opinion is mixed about whether this term should be italicized (as although it is Latin, it has become part of standard English), and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
 
 * In American English a comma should follow ''e.g.'' For example:
 :: ''Female marsupials (e.g., kangaroos, opossums) have a pouch.
