--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -103,7 +103,7 @@
 * Latvian: {{t|lv|sūkt}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti|xs=Lithuanian}}
 * Macedonian: {{t-|mk|цица|tr=cíca}}
-* Malay: {{t|ms|menghisap}}
+* Malay: {{t|ms|menghisap}}, {{t|ms|hisap}}
 * Norwegian: {{t-|no|suge}}
 * Persian: {{t+|fa|مکیدن|tr=makidan|xs=Persian}}
 * Polish: {{t+|pl|ssać}}
