--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -44,12 +44,13 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[jiǎ]] ([[jia3]])|wg=chia<sup>3</sup>}}
+{{cmn-hanzi|pin=[[jiǎ]] ([[jia3]])|wg=chia<sup>3</sup>}， {cmn-hanzi|pin=[[jià]] ([[jia4]])|wg=chia<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=人09}}
 
 * '''Compounds''':
 ** [[假借]]
+** [[暑假]]
 
 ----
 
