--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -423,7 +423,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Rapa Nui: {{tø|rap|tarai}}
 * Romanian: {{t-|ro|tăia}}
 * Romansch: {{t-|rm|tagliar|xs=Romansch}}
-* Russian: {{t+|ru|резать|alt=ре́зать|tr=rézat’}} {{impf}}, {{t|ru|порезать|alt=поре́зать|tr=porézat’}} {{pf.}}
+* Russian: {{t+|ru|резать|alt=ре́зать|tr=rézat’}} {{impf}}, {{t|ru|порезать|alt=поре́зать|tr=porézat’}} {{pf.}}, {{qualifier|axe}} {{t|ru|рубить|tr=rubítʹ|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|geàrr}}
 * Spanish: {{t+|es|cortar}},  {{t-|es|incidir}}
 * Swedish: {{t+|sv|skära}}
