t+pl:[[kurtyna]] t+pl:[[zasłonić]] ([[WT:EDIT|Assisted]]) <curtain#17034259>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -93,6 +93,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Japanese: [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 * [[Macedonian]]: {{t-|mk|кулиса|f|tr=kulísa}}
 * Persian: {{t+|fa|پرده|tr=parde|xs=Persian}}
+* Polish: {{t|pl|kurtyna|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 {{trans-mid}}
 * Romanian: {{t|ro|cortină|f}}
@@ -122,6 +123,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 ====Translations====
 {{trans-top|to cover with a curtain}}
 * Finnish: {{t-|fi|verhota}}
+* Polish: {{t|pl|zasłonić}}
 * Portuguese: [[cobrir]] com cortina, [[acortinar]], [[encortinar]]
 {{trans-mid}}
 * Swahili: {{t+|sw|pazia|xs=Swahili}}
