--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|enm}}
+From late {{etyl|enm}}. Origin uncertain
 
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|/stæb/}}, {{X-SAMPA|/st{b/}}
