--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -25,6 +25,7 @@
 
 {{trans-top|colour}}
 * French: {{t|fr|de lin}}
+* French: {{t|fr|de lin}}
 * Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
 * Polish: [[lniany]] {{m}}, [[jasnobrązowy]] {{m}}
 * Portuguese: [[cor de linho]] {{f}}
