--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -22,6 +22,15 @@
 
 ----
 
+==Korean==
+
+===Hanja===
+{{ko-hanja|hangeul=상|rv=sang|mr=sang}}
+
+# {{defn|lang=ko|sort=心09}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
