t+jbo:[[mu'u]] ([[WT:EDIT|Assisted]]) <e.g.#17053989>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -60,6 +60,7 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 * Korean: [[예]] (ye)
 * Latvian: [[piem.]] {{qualifier|[[piemēram]]}}
 * Lithuanian: [[pvz.]] {{qualifier|[[pavyzdžiui]]}}
+* Lojban: {{t|jbo|mu'u}}
 * Norwegian: {{t|no|f.eks.}} {{qualifier|{{t|no|for eksempel}}}}, {{t|no|t.d.}} {{qualifier|{{t|no|til dømes}}}}
 * Persian: [[براي مثال]]
 * Polish: [[np.]] {{qualifier|[[na]] [[przykład]]}}
