--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -107,6 +107,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Kurdish:
 *: Sorani: {{ku-Arab|[[ڕاکێشه‌]]}}
 * Latin: {{t-|la|vello}},  {{t+|la|traho}}
+* Lojban: {{t|jbo|lacpu}}
 * Malay: {{t|ms|tarik|xs=Malay}}
 * Norwegian: {{t|no|trekke}}, {{t|no|dra}}
 * Polish: [[ciągnąć]], [[pociągnąć]]
