/* English */ add plumbing sense <olive#17061369>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -20,6 +20,7 @@
 # A [[grayish]] [[green]] [[color]], that of an unripe olive.
 #: {{color panel|808000}}
 # {{anatomy}} An [[olivary body]], part of the [[medulla oblongata]].
+# A component of a plumbing compression joint; a ring which is placed between the nut and the pipe and compressed during fastening to provide a seal.
 
 ====Translations====
 {{trans-see|olive tree}}
