--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -39,7 +39,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|familiar}}
 * Galician: {{t+|gl|vomitar|xs=Galician}}
 * German: [[sich]] [[übergeben]], [[erbrechen]], {{t|de|kotzen}}
-* Greek: {{t|el|εξεμώ|tr=exemó}}, {{onym|el||[[κάνω#Greek|κάνω]] [[εμετό#Greek|εμετό]]|tr=káno emetó}}, {{t|el|ξερνώ|tr=xernó}} {{qualifier|colloquial}}
+* Greek: {{t|el|εξεμώ|tr=exemó}}, {{t-SOP|el|[[κάνω#Greek|κάνω]] [[εμετό#Greek|εμετό]]|tr=káno emetó}}, {{t|el|ξερνώ|tr=xernó}} {{qualifier|colloquial}}
 *: Ancient: {{tø|grc|ἐμέω|tr=emeō|sc=polytonic}}, {{tø|grc|ἐξεμέω|sc=polytonic}}
 * Hebrew: {{t|he|הקיא|tr=hekí}}
 * Hungarian: {{t+|hu|hány}}
