--- a/en/偕/偕.11109.wikitext
+++ b/en/偕/偕.11109.wikitext
@@ -35,7 +35,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[해]], [[혜]]|rv=hae, hye|mr=hae, hye}}
+{{ko-hanja|hangeul=[[해]|rv=hae|mr=hae}}
 
 # {{defn|lang=ko|sort=人09}}
 
