--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -72,6 +72,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Malay: {{t|ms|dahan}}
 * Navajo: {{tø|nv|tsin bigaan}}
 * Norwegian: {{t|no|gren|m}}, {{t|no|grein|m}}
+* Persian: {{t|fa|شاخه|tr=šâxe|sc=Grek}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}, {{t|pt|ramo}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
