--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -3,10 +3,10 @@
 [[Image:Acacia constricta branch.jpg|thumb|Tree branches.]]
 
 ===Pronunciation===
-* {{a|UK|US}} {{IPA|/bɹæntʃ/}}, {{X-SAMPA|/br\{ntS/}}
+* {{a|US|Northern England}} {{IPA|/bɹæntʃ/}}, {{X-SAMPA|/br\{ntS/}}
 * {{audio|en-us-branch.ogg|Audio (US)}}
-* {{rhymes|æntʃ}}
-* {{a|South England}} {{IPA|/bɹɑːntʃ/}}
+* {{rhymes|æntʃ|ɑːntʃ}}
+* {{a|RP}} {{IPA|/bɹɑːntʃ/}}
 
 ===Etymology===
 From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||paw|lang=la}}, possibly from Gaulish {{recons|vranca|lang=cel-gau}}. Indo-European cognates include [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand|lang=lt}}, [[Old Church Slavonic]] {{term||tr=rǫka|hand|lang=cu}}, [[Albanian]] {{term|rangë||yard work|lang=sq}}.{{rfscript|Cyrs}}
