--- a/en/坻/坻.13054.wikitext
+++ b/en/坻/坻.13054.wikitext
@@ -3,9 +3,8 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>0</sub>|canj=土竹心一 (GHPM), 土竹女戈 (GHVI)}}
 
-# an islet, a rock in a river
-# an embankment
-# to [[stop]]
+# islet small body of land in the water
+# [[hillside]]
 
 ====References====
 * {{Han ref|kx=0227.050|dkj=05001|dj=0462.220|hdz=10433.100|uh=577B|ud=22395|bh=CBFB|bd=52219}}
