/* Translations */ correct translit for my <stomach#17098847>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -50,7 +50,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Bengali: {{t-|bn|পাকস্থলী|tr=pakôsthôli|sc=Beng}}
 * Breton: [[stomog]] {{m}}
 * Bulgarian: {{t|bg|стомах|m|tr=stomáh|sc=Cyrl}}
-* Burmese: {{t|my|ဗိုက်|tr=baí|sc=Mymr}}
+* Burmese: {{t|my|ဗိုက်|tr=baik|sc=Mymr}}
 * Chamicuro: {{tø|ccc|knani}}
 * Chinese:
 *: Cantonese: {{tø|yue|胃|tr=wai6|sc=Hant}}
