t+ga:[[mianach]] ([[WT:EDIT|Assisted]]) <substance#17110604>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -43,6 +43,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Hindi: {{t|hi|पदार्थ|m|tr=padārth|xs=Hindi}}
 * Hungarian: {{t+|hu|anyag}}, {{t+|hu|tartalom}}
 {{trans-mid}}
+* Irish: {{t|ga|mianach|m}}
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
 * Latin: {{t-|la|substantia|f}}
 * Latvian: {{t|lv|viela|f}}
