t+ru:[[подколенное сухожилие]] ([[WT:EDIT|Assisted]]) <hamstring#17119998>

--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -15,6 +15,7 @@
 {{trans-top|One of the great tendons situated in each side of the ham, or space back of the knee}}
 * Finnish: {{t-|fi|kinnerjänne}}
 {{trans-mid}}
+* Russian: {{t|ru|подколенное сухожилие|n|tr=podkolénnoje suxožílije|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-see|biceps femoris}}
