<United States of America#17122428>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -68,6 +68,7 @@
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|tr=Amerika Koşmo Ştattarı|sc=Cyrl}}
 * Lakota: {{tø|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
+{{trans-mid}}
 * Latgalian: {{tø|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{tø|ltg|ASV}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
