t+tpi:[[mit]] t+tpi:[[skin]] ([[WT:EDIT|Assisted]]) <flesh#17122752>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -72,6 +72,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Swahili: {{t+|sw|chembechembe|xs=Swahili}}
 * Swedish: {{t|sv|kött|n}}
 * Telugu: {{t+|te|కండ|tr=kanDa}}
+* Tok Pisin: {{t|tpi|mit}}
 * Volapük: {{t|vo|mid}}
 * Walloon: {{t|wa|tchå|xs=Walloon}}
 * Welsh: {{t|cy|cnawd|xs=Welsh}}
@@ -95,6 +96,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Scottish Gaelic: [[feòil]] {{f}}
 * Swahili: {{t+|sw|kinofu|xs=Swahili}}
 * Swedish: {{t|sv|kött|n}}
+* Tok Pisin: {{t|tpi|mit}}
 {{trans-bottom}}
 
 {{trans-top|human body entity}}
@@ -108,6 +110,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Latvian: {{t|lv|ķermenis|m}}
 * Scottish Gaelic: [[feòil]] {{f}}, [[craiceann]] {{m}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
+* Tok Pisin: {{t|tpi|mit}}
 {{trans-bottom}}
 
 {{trans-top|skin}}
@@ -119,6 +122,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Greek: {{t|el|δέρμα|n|tr=dérma|sc=Grek}}
 * Scottish Gaelic: [[craiceann]] {{m}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
+* Tok Pisin: {{t|tpi|skin}}
 * Volapük: {{t|vo|skin}}
 {{trans-bottom}}
 
