--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -222,8 +222,11 @@ From {{etyl|en|tpi}} {{term|head|lang=en}}.
 {{head|tpi|noun}}
 
 # {{anatomy|lang=tpi}} [[head]]
+#* {{tpi-cite-bible|Gen|3|15|Na bai mi mekim yu i stap birua bilong meri, na meri i stap birua bilong yu. Na bai mi mekim ol lain bilong yu i birua long lain bilong meri. Bai ol i krungutim '''het''' bilong yu, na bai yu kaikaim lek bilong ol.”}}
 
-[[Category:Tok Pisin nouns]]
+{{LDL|tpi}}
+
+
 [[Category:tpi:Anatomy]]
 
 [[af:het]]
