--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -133,6 +133,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Norwegian: {{t+|no|snakke}}
 * Occitan: [[parlar]]
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan|xs=Persian}}
+* Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
 * Polish: {{t+|pl|mówić}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t|pa|ਬੋਲਣਾ|sc=Guru|xs=Punjabi}}
