--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -412,10 +412,11 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * German: {{t+|de|einschneiden}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Hindi: {{t|hi|काटना|sc=Deva}} (kāṭnā)
-{{trans-mid}}
 * Icelandic: {{t+|is|skera}}
+{{trans-mid}}
 * Italian: {{t+|it|tagliare}},  {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
+* Korean: {{t|ko|끊다|tr=kkeunta|sc=Kore}}
 * Latin: {{t|la|inseco}},  {{t-|la|incido}}
 * Persian: {{t+|fa|بریدن|tr=boridan|xs=Persian}}
 * Polish: {{t+|pl|ciąć}}
