--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -99,6 +99,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m}}, {{t|sh|стомак|m}}
 *: Roman: {{t|sh|želudac|m}}, {{t|sh|stomak|m}}
+* Sinhalese: {{t|si|බඩ|tr=baḍa|sc=Sinh}}
 * Slovak: {{t|sk|žalúdok|m}}
 * Slovene: {{t|sl|želodec|m}}
 * Spanish: {{t+|es|estómago|m}}
