--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -109,6 +109,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Irish: [[droichead]], {{t|ga|droichead|m}}
 * Italian: {{t+|it|ponte|m}}
 * Japanese: {{t|ja|橋|tr=はし, hashi|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|pont|m}}
 * Kannada: {{t|kn|ಸೇತುವೆ|tr=sētuve|sc=Knda}}
 * Kazakh: {{t|kk|көпір|tr=köpir|sc=Cyrl}}
 * Khmer: {{t|km|ស្ពាន|tr=spīŭn|sc=Khmr}}
@@ -120,9 +121,9 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|br
 * Lao: {{t|lo|ຂົວ|tr=khua|sc=Laoo}}
 * Latgalian: {{tø|ltg|tylts}}
 * Latin: {{t+|la|pons|m}}
+{{trans-mid}}
 * Latvian: {{t-|lv|tilts|m|xs=Latvian}}
 * Lingala: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
-{{trans-mid}}
 * Lithuanian: {{t+|lt|tiltas|m|xs=Lithuanian}}
 * Lower Sorbian: [[móst]] {{m}}
 * Luxembourgish: {{t|lb|Bréck|f}}
