/* Derived terms */ <play#17174180>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -578,6 +578,7 @@
 * [[plaything]]
 * [[playtime]]
 * [[play to the gallery]]
+* [[play to win]]
 * [[play truant]]
 * [[play up]]
 * [[play upon]]
