--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -15,6 +15,9 @@
 
 # Any of various land-dwelling [[reptile]]s, of [[family]] ''[[Testudinidae]]'', whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 
+====Synonymns====
+* {{l|en|shellpad}}
+
 ====Translations====
 {{trans-top|land-dwelling reptile}}
 * Afrikaans: {{qualifier|tortoise or turtle}} {{t|af|skilpad}}
