--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -189,6 +189,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 
 ====Translations====
 {{trans-top|jargon/terminology}}
+* French: {{t|fr|jargon|m}}
 * Italian: {{t|it|gergo|m}}
 {{trans-mid}}
 {{trans-bottom}}
