--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -8,7 +8,7 @@
 * {{audio|En-us-Israel.ogg|Audio (US)}}
 
 ===Etymology===
-From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, which, in Biblical Hebrew, means "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary).
+From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'él}}, which, in Biblical Hebrew, means "he who wrestles with God" (a Biblical name for [[Jacob]] after he wrestles with an adversary).
 
 ===Proper noun===
 {{en-proper noun}}
