--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -77,7 +77,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * [[speech]]
 
 ====Translations====
-{{trans-top|to communicate with one's voice}}
+{{trans-top|to communicate with one's voice using words}}
 * Afrikaans: {{t-|af|praat|xs=Afrikaans}}
 * Arabic: {{t|ar|تحدث|tr=taḥáddaṯa}},  {{t|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
@@ -97,7 +97,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Dutch: {{t+|nl|spreken}}
 * Esperanto: {{t-|eo|paroli|xs=Esperanto}}
 * Estonian: {{t-|et|rääkima}}
-* Finnish: {{t+|fi|puhua}} (1, 2, 3, 4, 5, 6), {{t+|fi|kertoa}} (3), {{t-|fi|pitää puhe}} (5)
+* Finnish: {{t+|fi|puhua}}
 * French: {{t+|fr|parler}}
 * Georgian: {{t|ka|ლაპარაკი|tr=laparaki|sc=Geor}}
 * German: {{t+|de|sprechen}},  {{t+|de|reden}}
@@ -166,7 +166,22 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Zulu: [[ukukhuluma]] (ugukuluma)
 {{trans-bottom}}
 
-{{trans-top|be able to communicate in a language}}
+{{trans-top|to have a conversation}}
+* Finnish: {{t|fi|puhua}}, {{t|fi|keskustella}}, {{t|fi|jutella}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to communicate or converse by some means other than orally}}
+* Finnish: {{t|fi|puhua}}, {{t|fi|kertoa}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to deliver a speech}}
+* Finnish: {{t|fi|puhua}}, {{t|fi|pitää puhe}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to be able to communicate in a language}}
 * Estonian: {{t|et|rääkima}}
 * Finnish: {{t|fi|puhua}}
 * French: {{t|fr|parler}}
@@ -177,6 +192,16 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Russian: {{t|ru|говорить|sc=Cyrl}}
 * Spanish: {{t|es|hablar}}
 * Swedish: {{t|sv|tala}}
+{{trans-bottom}}
+
+{{trans-top|to utter}}
+* Finnish: {{t|fi|sanoa}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to communicate a fact or feeling}}
+* Finnish: {{t|fi|viestiä}}, {{t|fi|ilmaista}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Noun===
