--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -22,9 +22,8 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 # {{astronomy}} The [[highest]] point in the sky reached by a [[celestial body]].
 #* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
 #*: ...in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out...
-#* '''1920''', [[w:Peter B. Kyne|Peter B. Kyne]], ''The Understanding Heart'', Chapter&nbsp;II
-#*:As far to the west as Monica could see, her world was a sea of fog, … .  Above it arched a cerulean sky; as the sun climbed to the '''zenith''', …, the fog gradually took on a bluish tinge.
-
+#* '''1920''', [[w:Peter B. Kyne|Peter B. Kyne]], ''The Understanding Heart'', Chapter II:
+#*: As far to the west as Monica could see, her world was a sea of fog, {{...}}.  Above it arched a cerulean sky; as the sun climbed to the '''zenith''', {{...}}, the fog gradually took on a bluish tinge.
 # Highest point or [[state]]; [[peak]].
 #* {{quote-book
 |page=173
