t+az:[[pərdə]] ([[WT:EDIT|Assisted]]) <curtain#17461672>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -32,6 +32,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-top|piece of cloth covering a window}}
 * Arabic: {{t|ar|ستارة|f|tr=sitaara}}
 * Armenian: {{t-|hy|վարագույր|tr=varaguyr}}
+* Azeri: {{t|az|pərdə}}
 * Bulgarian: {{t|bg|перде|n}},  {{t+|bg|завеса|f}}
 * Catalan: {{t|ca|cortina|f}}
 * Chinese:
