--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -142,19 +142,18 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 
 =====Translations=====
 {{trans-top|the fruit}}
-* Afrikaans: [[pruim]]
+* Afrikaans: {{t|af|pruim}}
 * Ainu: {{tø|ain|モマ|tr=moma}}
 * Arabic: {{t|ar|خوخ|m|tr=xawx|sc=Arab}}, {{t|ar|برقوق|m|tr=barqūq|sc=Arab}}
 * Armenian: {{t-|hy|սալոր|tr=salor}}, {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
-* Basque: [[aran]]
+* Basque: {{t|eu|aran}}
 * Belarusian: {{t|be|сліва|f|tr=slíva|sc=Cyrl}}
 * Bulgarian: {{t+|bg|слива|f|tr=slíva}}
-* Catalan: [[pruna]] {{f}}
+* Catalan: {{t|ca|pruna|f}}
 * Cherokee: {{t|chr|ᏆᏄᎾᏍᏗ|tr=quanunasdi|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t-|cmn|李子|tr=lǐzi|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|李仔|tr=lí-á|sc=Hans}}
-* Croatian: {{t|hr|šljiva|f}}
 * Czech: {{t+|cs|švestka|f}}, {{t-|cs|slíva|f}}
 * Danish: {{t|da|blomme}}
 * Dutch: {{t+|nl|pruim}}
@@ -165,7 +164,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Georgian: {{t|ka|ქლიავი|tr=k'liavi|sc=Geor}}
 * German: {{t+|de|Pflaume|f}}, {{t+|de|Zwetschge|f}}
 * Greek: {{t+|el|δαμάσκηνο|n|tr=damáskino|sc=Grek}}
-*: Ancient Greek: [[προῦμνον]] {{n}}
+*: Ancient Greek: {{t|grc|προῦμνον|n}}
 * Hebrew: {{t|he|שזיף|m|tr=shazif|sc=Hebr}}
 * Hindi: {{t|hi|आलूचा|tr=ālūcā|sc=Deva}}, {{t|hi|आलूबुखारा|tr=ālūbukhārā|sc=Deva}}, {{t|hi|बेर|tr=ber|sc=Deva}}
 * Hungarian: {{t+|hu|szilva}}
@@ -182,10 +181,10 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-mid}}
 * Latvian: {{t|lv|plūme|f}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
-* Luxembourgish: , {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
+* Luxembourgish: {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
 * Macedonian: {{t-|mk|слива|f|tr=slíva}}
 * Manx: {{t|gv|plumbis|m}}
-* Middle High German: [[pflume|pflūme]], [[pfrume|pfrūme]]
+* Middle High German: {{t|enm|pflume|alt=pflūme}}, {{t|enm|pfrume|alt=pfrūme}}
 * Navajo: {{tø|nv|chʼil naʼatłʼoʼiitsoh}}
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * Old High German: {{t|goh|pfruma|alt=pfrūma}}
@@ -196,7 +195,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Romanian: {{t+|ro|prună|f}}
 * Romansch: {{t|rm|primbla|f}}, {{t|rm|prema|f}}, {{t|rm|prem|m}}, {{t|rm|zuesca|f}}, {{t|rm|zvetga|f}}, {{t|rm|paloja|f}}, {{t|rm|paloga|f}}, {{t|rm|prüna|f}}, {{t|rm|brümbla|f}}
 * Russian: {{t+|ru|слива|f|tr=slíva}}
-* Scots: [[ploom]], [[ploum]]
+* Scots: {{t|sco|ploom}}, {{t|sco|ploum}}
 * Scottish Gaelic: {{t-|gd|plumas|m|xs=Scottish Gaelic}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|шљива|f}}
@@ -206,7 +205,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Spanish: {{t+|es|ciruela|f}}
 * Swahili: {{t|sw|mzambarau|xs=Swahili}}
 * Swedish: {{t+|sv|plommon|n}}
-* Taos: [[pùlulúna]]
+* Taos: {{t|twf|pùlulúna}}
 * Thai: {{t|th|พลัม|tr=plam|sc=Thai}}, {{t|th|พรุน|tr=prun|sc=Thai}}
 * Turkish: {{t+|tr|erik}}
 * Ukrainian: {{t|uk|слива|f|tr=slýva|sc=Cyrl}}
@@ -218,31 +217,29 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-bottom}}
 
 {{trans-top|the tree}}
-* Afrikaans: [[pruim]]
+* Afrikaans: {{t|af|pruim}}
 * Ainu: {{tø|ain|モマニ|tr=momani}}
 * Armenian: {{t-|hy|սալորենի|tr=saloreni}}
 * Basque: {{t|eu|aranondo}}
-* Bosnian: {{t-|bs|šljiva|f}}
-* Catalan: [[pruner]] {{m}}
+* Catalan: {{t|ca|pruner|m}}
 * Cheyenne: {{tø|chy|ma'xemenó'e}}
-* Croatian: {{t+|hr|šljiva|f}}
 * Czech: {{t+|cs|švestka|f}}, {{t-|cs|slíva|f}}
 * Danish: {{t|da|blomme}}, {{t|da|blommetræ}}
-* Dutch: [[pruimenboom]] {{m}}
+* Dutch: {{t|nl|pruimenboom|m}}
 * Estonian: {{t-|et|ploomipuu}}
 * Finnish: {{t+|fi|luumupuu}}
 * French: {{t+|fr|prunier|m}}
 * German: {{t-|de|Pflaumenbaum|m}}, {{t-|de|Zwetschgenbaum|m}}
-* Greek: {{t+|el|δαμασκηνιά|f}} (damaskiniá)
+* Greek: {{t+|el|δαμασκηνιά|f|tr=damaskiniá}}
 * Hungarian: {{t|hu|szilvafa}}
 * Icelandic: {{t|is|plómutré|f}}
-* Irish: [[crann plumaí]] {{m}}
+* Irish: {{t|ga|crann plumaí|m}}
 * Italian: {{t+|it|prugno|m}}, {{t-|it|susino|m}}
-* Japanese: [[セイヨウスモモ]] (seiyō sumomo)
+* Japanese: {{t|ja|セイヨウスモモ|tr=seiyō sumomo}}
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
 {{trans-mid}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
-* Latvian: [[plūme]] {{f}}
+* Latvian: {{t|lv|plūme|f}}
 * Luxembourgish: {{t|lb|Prommebam|m}}, {{t|lb|Praumebam|m}}
 * Macedonian: {{t-|mk|слива|f|tr=slíva}}
 * Manx: {{t|gv|billey plumbis|m}}
@@ -252,11 +249,11 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Portuguese: {{t+|pt|ameixeira|f}}
 * Romanian: {{t+|ro|prun|m}}
 * Russian: {{t+|ru|слива|f|tr=slíva}}
-* Scots: [[ploom]], [[ploum]]
+* Scots: {{t|sco|ploom}}, {{t|sco|ploum}}
 * Scottish Gaelic: {{t-|gd|plumas|m|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: [[шљива#Serbian|шљива]] {{f}}
-*: Roman: [[šljiva#Serbian|šljiva]] {{f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|шљива|f}}
+*: Roman: {{t|sh|šljiva|f}}
 * Slovene: {{t+|sl|sliva|f}}
 * Spanish: {{t+|es|ciruelo|m}}
 * Swahili: {{t|sw|mzambarau|xs=Swahili}}
@@ -266,14 +263,14 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-bottom}}
 
 {{trans-top|the colour}}
-* Afrikaans: [[pers]]
+* Afrikaans: {{t|af|pers}}
 * Danish: {{t|da|blomme}}farve
 * Dutch: {{t-|nl|donkerrood|n}}
-* Greek: {{t|el|δαμασκηνί|n}} (damaskiní)
+* Greek: {{t|el|δαμασκηνί|n|tr=damaskiní}}
 * Icelandic: {{t|is|plómublár|f}}
 {{trans-mid}}
-* Irish: [[plumachorcra]]
-* Japanese: [[暗紫色]] (あんししょく, anshishoku)
+* Irish: {{t|ga|plumachorcra}}
+* Japanese: {{t|ja|暗紫色|tr=あんししょく, anshishoku}}
 * Swahili: {{t|sw|zambarau|xs=Swahili}}
 * Vietnamese: [[màu]] [[mận]]
 {{trans-bottom}}
@@ -290,7 +287,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-see|[[raisin]]}}
 
 {{trans-top|(''slang'') testicle}}
-* Catalan: [[pilotes]], [[ous]]
+* Catalan: {{t|ca|pilotes|m|p}}, {{t|ca|ous|m|p}}
 {{trans-mid}}
 * Swahili: {{t|sw|mzambarau|xs=Swahili}}
 {{trans-bottom}}
@@ -326,9 +323,9 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 =====Translations=====
 {{trans-top|colour}}
 * Danish: {{t|da|blommefarvet}}
-* Dutch: [[donkerrood]], [[donkerrode]]
-* Finnish: [[luumunpunainen]]
-* Irish: [[plumachorcra]]
+* Dutch: {{t|nl|donkerrood}}, {{t|nl|donkerrode}}
+* Finnish: {{t|fi|luumunpunainen}}
+* Irish: {{t|ga|plumachorcra}}
 {{trans-mid}}
 * Japanese: [[暗紫色]]の (あんししょくの, anshishoku no)
 * Romanian: {{t+|ro|prună|f}}
