t+ja:[[話す]] ([[WT:EDIT|Assisted]]) <speak#17501850>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -186,6 +186,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Finnish: {{t|fi|puhua}}
 * French: {{t|fr|parler}}
 * German: {{t|de|sprechen}}
+* Japanese: {{t|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 * Lithuanian: {{t|lt|kalbėti}}
 {{trans-mid}}
 * Lojban: [[baupli]]
