--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -62,7 +62,7 @@
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
-* Malay: {{t|ms|penyu}}, {{t|ms|kura-kura}}
+* Malay: {{t|ms|kura-kura}}
 * Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Navajo: {{tø|nv|chʼééh digháhii}}
