Reverted edits by [[Special:Contributions/174.48.32.232|174.48.32.232]] ([[User_talk:174.48.32.232|Talk]]); changed back to last version by [[User:Chuck Entz|Chuck Entz]] <stab#17516053>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Perhaps from Scottish Gaelic ''[[stob]]''.
+From late {{etyl|enm}}. Origin uncertain
 
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|/stæb/}}, {{X-SAMPA|/st{b/}}
