t+zu:[[tini]] t+yao:[[vaka]] t+cy:[[bricsen]] t+ve:[[tshidina]] t+tk:[[kerpich]] t+tl:[[ladrilyo]] t+sw:[[tofari]] t+sw:[[matufali]] t+st:[[setena]] t+sq:[[tullë]] t-balance t+pap:[[klenku]] t+mi:[[pereki]] t+mn:[[туйпуу]] t+mg:[[biriky]] t+gil:... <brick#17541352>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -58,6 +58,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 {{trans-top|hardened block used for building}}
 * Afrikaans: {{t-|af|baksteen|xs=Afrikaans}}
 * Akkadian: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
+* Albanian: {{t|sq|tullë|f|sc=Cyrl}}
 * Arabic: {{t|ar|طوبة|f|tr=ṭūba}}, {{t|ar|لبنة|f|tr=lábina}}, {{t|ar|قرميد|m|tr=qarmīn|sc=Arab}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * Basque: [[adreilu]]
@@ -65,6 +66,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Bosnian: {{t-|bs|cigla|f}}
 * Bulgarian: {{t+|bg|тухла|f|tr=túhla|sc=Cyrl}}
 * Catalan: [[maó]]
+* Cebuano: {{tø|ceb|bika}}
 * Chinese:
 *: Mandarin: {{t|cmn|磚塊|sc=Hani}}, {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}}, {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Croatian: {{t-|hr|cigla|f}}
@@ -74,11 +76,14 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Dutch Low Saxon: {{tø|nds-nl|keie}}
 * Esperanto: {{t-|eo|briko|xs=Esperanto}}
 * Estonian: [[tellis]]
+* Faroese: {{t|fo|múrsteinur|f}}
 * Finnish: {{t+|fi|tiili}}
 * French: {{t+|fr|brique}}
 * Georgian: {{t|ka|აგჟრი|tr=agžri|sc=Geor}}, {{t|ka|აგური|tr=aguri|sc=Geor}}
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
+* Gilbertese: {{tø|gil|te buatua}}
 * Greek: {{t|el|τούβλο|n|tr=toúvlo}}
+* Hausa: {{t|ha|k'unk'uu}}
 * Hebrew: {{t+|he|לבנה|f|tr=l'véna|sc=Hebr}}
 * Hungarian: {{t+|hu|tégla}}
 * Icelandic: {{t|is|múrsteinn|m}}, {{t|is|tígulsteinn|m}} {{qualifier|rare}}, {{t|is|leirsteinn|m}} {{qualifier|rare}}
@@ -87,19 +92,23 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Irish: {{t|ga|bríce|m}}
 * Italian: {{t+|it|mattone}}
 * Japanese: {{t|ja|煉瓦|tr=れんが, renga}}, {{t|ja|れんが|tr=renga|sc=Jpan}}
-{{trans-mid}}
 * Jèrriais: {{tø|roa-jer|brique|f}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
 * Latin: {{t-|la|later|m}}
+{{trans-mid}}
 * Latvian: [[ķieģelis]] {{m}}
 * Limburgish: {{t|li|briek|xs=Limburgish}}
 * Lithuanian: [[plyta]]
+* Malagasy: {{t|mg|biriky|sc=Mlym}}
 * Malay: {{t-|ms|batu bata|xs=Malay}}
+* Maori: {{t|mi|pereki}}
+* Mongolian: {{t|mn|туйпуу|tr=tuypuu|sc=Cyrl}}
 * Norwegian:
 *: Bokmål: {{t|nb|murstein|m}}
 *: Nynorsk: {{t|nn|murstein|m}}
 * Occitan: {{t-|oc|brica|f|xs=Occitan}}
+* Papiamentu: {{tø|pap|klenku}}
 * Persian: {{t|fa|آجر|tr=âjor|sc=fa-Arab}}
 * Polish: {{t+|pl|cegła}}
 * Portuguese: {{t+|pt|tijolo}}
@@ -111,15 +120,23 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Serbo-Croatian: {{t|sh|cigla|xs=Serbo-Croatian}}, {{t|sh|цигла|f}}
 * Slovak: {{t|sk|tehla|f}}
 * Slovene: {{t|sl|opeka|f}}, {{t|sl|zidak|m}}
+* Sotho: {{t|st|setena}}
 * Spanish: {{t+|es|ladrillo|m}}
+* Swahili: {{t|sw|tofari}}, {{t|sw|matufali}}
 * Swedish: {{t+|sv|tegel|n}}, {{t|sv|tegelsten}}
+* Tagalog: {{t|tl|ladrilyo}}
 * Tamil: [[செங்கல்]]
 * Thai: {{t|th|อิฐ|tr=ìt|sc=Thai}}
 * Turkish: {{t+|tr|tuğla}}
+* Turkmen: {{t|tk|kerpich}}
 * Ukrainian: {{t|uk|цегла|f|tr=céhla|sc=Cyrl}}
+* Venda: {{tø|ve|tshidina}}
 * Vietnamese: {{t+|vi|gạch|xs=Vietnamese}}
 * Volapük: {{t|vo|bakaston}}
 * Walloon: {{t-|wa|brike|xs=Walloon}}
+* Welsh: {{t|cy|bricsen|f}}
+* Yao: {{tø|yao|vaka}}
+* Zulu: {{t|zu|tini}}
 {{trans-bottom}}
 
 {{trans-top|a building material}}
