/* Declension */ fixed nominative <Israel#17559168>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -187,7 +187,7 @@ From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'
 # [[#English|Israel]]
 
 ====Declension====
-{{fi-decl-risti|Israel|nopl=1}}
+{{fi-decl-risti|Israel|nopl=1|i=0}}
 
 ===Anagrams===
 * [[laseri#Finnish|laseri]]
