--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -45,10 +45,12 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 *: Mandarin: {{t|zh|支|tr=zhī|sc=Hani}}, {{t|zh|樹枝|sc=Hani}}, {{t|zh|树枝|tr=shùzhī|sc=Hani}}
 * Croatian: {{t-|hr|grana|f}}
 * Czech: {{t-|cs|větev|f}}
+* Dalmatian: {{t|dlm|ruoma|f}}
 * Dutch: {{t+|nl|tak}}
 * Esperanto: {{t+|eo|branĉo|xs=Esperanto}}
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche|f}}, {{t+|fr|rameau|m}}
+* Friulian: {{t|fur|ram|m}}
 * Georgian: {{t-|ka|შტო|tr=što|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|tr=kladí|sc=Grek}}, {{t+|el|κλαρί|n|tr=klarí|sc=Grek}}
@@ -72,11 +74,14 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Malay: {{t|ms|dahan}}
 * Navajo: {{tø|nv|tsin bigaan}}
 * Norwegian: {{t|no|gren|m}}, {{t|no|grein|m}}
+* Occitan: {{t|oc|ram|m}}, {{t|oc|ramèl|m}}
 * Persian: {{t|fa|شاخه|tr=šâxe|sc=Grek}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}, {{t|pt|ramo}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
+* Romansch: {{t|rm|rom|m}}, {{t|rm|ram|m}}
 * Russian: {{t+|ru|ветвь|f|tr=vetv’|sc=Cyrl}}, {{t+|ru|ветка|f|tr=vétka|sc=Cyrl}}
+* Sardinian: {{t|sc|nae}}, {{t|sc|nai}}
 * Scots: {{tø|sco|beuch|xs=Scots}}
 * Scottish Gaelic: {{t-|gd|meur|f|xs=Scottish Gaelic}}
 * Serbian: [[грана]] (grana) {{f}}, [[вејка]] (vejka) {{f}} (leafless branch)
