/* Derived terms */ <come#17592051>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -58,12 +58,13 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[come down]]
 * [[come forward]]
 * [[come into]]
+* [[come into one's own]]
 * [[come off]]
 * [[come off it]]
 * [[come on]]
 * [[come out]]
-* [[come out with]]
 {{rel-mid3}}
+* [[come out with]]
 * [[come short]]
 * [[come to]]
 * [[come through]]
