--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -4,7 +4,7 @@
 (1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{etyl|en|-}} ''[[sheen]]'' "beautiful" (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|sciene|scīene|beautiful|lang=ang}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|wlitig|wlitiġ|beautiful|lang=ang}}.
 
 ===Pronunciation===
-* {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəɫ/}}, {{X-SAMPA|/"bju:tIf@l/}}
+* {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|[ˈbjuːtɪfəɫ]}}, {{X-SAMPA|/"bju:tIf@l/}}
 * {{audio|en-us-beautiful.ogg|Audio (US)}}
 * {{audio|En-uk-beautiful.ogg|Audio (UK)}}
 * {{hyphenation|beau|ti|ful}}
