--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -78,6 +78,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 {{trans-top|trailer or vehicle decorated for a parade}}
 * Dutch: {{t+|nl|praalwagen}}
 * Finnish: {{t|fi|paraatiauto}}
+* French: {{t|fr|char|m}}
 * German: {{t+|de|Festwagen|m}}
 {{trans-mid}}
 * Russian: {{t+|ru|платформа|f|tr=platfórma}}
