--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -83,6 +83,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
 * Romani: {{tø|rom|rotya|f}}
+* Romanian: {{t|ro|fustă|f}}
 * Russian: {{t+|ru|юбка|f|tr=júbka}}
 * Serbian:
 *: Cyrillic: [[сукња#Serbian|сукња]] {{f}}
