--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|cote}} {{qualifier|obsolete}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|fro}} {{term|cote|lang=fro}}, {{term|cotte||outer garmet with sleeves|lang=fro}}, from Old {{etyl|frk}} {{recons|kotta|kotta|coat|lang=frk}}, from {{proto|Germanic|kuttō||kuttōn|cowl, woolen cloth, coat|lang=en}}, from {{proto|Indo-European|gʷeud-||gud-|woolen clothes|lang=en}}. Cognate with {{etyl|goh|-}} {{term|kozza|lang=goh}}, {{term|kozzo||woolen coat|lang=goh}} (Modern German {{term|Kotze|lang=de}}), {{etyl|gml|-}} {{term|kot||coat|lang=gml}}, Ancient Greek {{term|βεῦδος||woman's attire|tr=beũdos|lag=grc}}.
+From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|fro}} {{term|cote|lang=fro}}, {{term|cotte||outer garmet with sleeves|lang=fro}}, from Old {{etyl|frk}} {{recons|kotta|kotta|coat|lang=frk}}, from {{proto|Germanic|kuttô||kuttōn|cowl, woolen cloth, coat|lang=en}}, from {{proto|Indo-European|gʷeud-||gud-|woolen clothes|lang=en}}. Cognate with {{etyl|goh|-}} {{term|kozza|lang=goh}}, {{term|kozzo||woolen coat|lang=goh}} (Modern German {{term|Kotze|lang=de}}), {{etyl|gml|-}} {{term|kot||coat|lang=gml}}, Ancient Greek {{term|βεῦδος||woman's attire|tr=beũdos|lag=grc}}.
 
 ===Pronunciation===
 * {{audio|en-us-coat.ogg|Audio (US)}}
