--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -317,6 +317,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 {{trans-top|to capture or snare}}
 * {{trreq|Georgian}}
 * Italian: {{t|it|agguantare}}
+* Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Polish: [[łapać]] / [[złapać]]
 * Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}, {{t|ru|поймать|tr=pojmát'}} {{pf.}}
 * Sardinian:
@@ -350,6 +351,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}}, {{t|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|tr=japda|sc=Hang}}
 * Luxembourgish: {{t|lb|fänken}}
+* Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan|xs=Persian}}
 * Romanian: {{t+|ro|prinde}}
 * Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}, {{t|ru|поймать|tr=pojmát'}} {{pf.}}
@@ -368,6 +370,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * German: {{t+|de|verstehen}}, {{t+|de|begreifen}}
 * Hebrew: {{t|he|תפס|tr=tafás}}
 {{trans-mid}}
+* Marathi: {{t|mr|समझणे|tr=samazhaṇe|sc=Deva}}
 * Russian: {{t|ru|схватывать|tr=sxvátyvat'}} {{impf}}, {{t|ru|схватить|tr=sxvatít'}} {{pf.}}, {{t+|ru|понимать|tr=ponimát'}} {{impf}}, {{t+|ru|понять|tr=ponját'}} {{pf.}}, {{t|ru|расслышать|tr=rasslýšat'}} {{pf.}} (be able to hear and catch something said correctly)
 * Slovene: [[ujeti]]
 * Spanish: {{qualifier|Chile, informal}} {{t+|es|cachar}}, {{t|es|captar}}, {{t|es|comprender}}
