--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-First attested in {{etyl|enm}}, probably from {{etyl|ga}} {{term|stob||to prick, to prod, to push, to thrust|lang=ga}}.
+First attested in {{etyl|enm}}, probably from {{etyl|gd}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}.
 
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|/stæb/}}, {{X-SAMPA|/st{b/}}
