--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -401,7 +401,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 * Amharic: {{t-|am|መቁረጥ|tr=mäquräṭ|sc=Ethi}}
 * Arabic: {{t+|ar|جرح|alt=جَرَحَ|tr=jaraHa}}
 * Armenian: {{t-|hy|կտրել|tr=ktrel}}
-* Aromanain: {{t-|rup|talju}}
+* Aromanian: {{t-|rup|talju}}
 * Bengali: {{t-|bn|কাটা|sc=Beng|xs=Bengali}}
 * Bulgarian: {{t+|bg|режа}}
 * Catalan: {{t+|ca|tallar}}
