t+ga:[[rúnaí]] t-balance ([[WT:EDIT|Assisted]]) <secretary#17733036>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -51,8 +51,9 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * Ido: {{t+|io|sekretario|xs=Ido}}
 * Interlingua: [[secretaria]] {{f}}
-* Italian: {{t+|it|segretario|m}}
+* Irish: {{t|ga|rúnaí|m}}
 {{trans-mid}}
+* Italian: {{t+|it|segretario|m}}
 * Japanese: {{t-|ja|秘書|tr=ひしょ, hisho}}
 * Korean: {{t|ko|비서|tr=biseo|sc=Kore}} ({{t|ko|秘書|sc=Kore}})
 * Kurdish:
@@ -89,6 +90,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * Hungarian: {{t+|hu|miniszter}}, {{t-|hu|államtitkár}}
 * Interlingua: [[secretaria]] {{f}}
 {{trans-mid}}
+* Irish: {{t|ga|rúnaí|m}}
 * Japanese: {{t+|ja|大臣|tr=だいじん, daijin}}, {{t|ja|長官|tr=ちょうかん, chōkan}}
 * Kurdish:
 *: Kurmanji: [[sekreter]]
@@ -109,6 +111,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * Greek: {{t+|el|γραμματέας|m|f|tr=gramatéas}}
 {{trans-mid}}
 * Hungarian: {{t-|hu|főtitkár}}
+* Irish: {{t|ga|rúnaí|m}}
 * Scottish Gaelic: {{t-|gd|rùnaire|m|xs=Scottish Gaelic}}
 * Swahili: {{t|sw|karani|xs=Swahili}}
 {{trans-bottom}}
@@ -135,6 +138,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * German: {{t+|de|Sekretär}}
 * Hungarian: {{t-|hu|kígyászkeselyű}}
 {{trans-mid}}
+* Irish: {{t|ga|rúnaí|m}}
 * Russian: {{t|ru|птица-секретарь|f|tr=ptíca-sekretár’}}
 * Spanish: {{t-|es|serpentario|m}}
 * Swahili: {{t|sw|makarani|xs=Swahili}}
