testing short run per [[WT:BP#Bot request]]; block me indefinitely if you suspect any problem <libre#17742704>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -145,9 +145,9 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 {{es-verb-form|librar}}
 
 # {{es-verb form of|ending=ar|mood=imperative|pers=2|formal=yes|number=singular|librar}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[librar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[librar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[librar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|librar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|librar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|librar}}
 
 ----
 
