--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -296,9 +296,9 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ===Verb===
 {{es-verb-form|curvar}}
 
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[curvar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[curvar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[curvar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|curvar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|curvar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|curvar}}
 
 [[ar:curve]]
 [[cs:curve]]
