--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -243,7 +243,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 
 =====Translations=====
 {{trans-top|quality}}
-* Norwegian: {{t|no|berøring|m|f}}
+* Norwegian:
 *: Bokmål: {{t|nb|berøring|m}}
 * Spanish: {{t+|es|tacto|m}}
 {{trans-mid}}
