/* Adjective */ # {{slang|dated}} [[drunk]]; [[tipsy]] <!--Webster 1913-->  similar to existing NZ sense but formerly used elsewhere too <cut#17869150>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -28,6 +28,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 # {{Australia|NZ|slang}} Emotionally [[hurt]].
 # Eliminated from consideration during a recruitment drive.
 # Removed from a team roster.
+# {{slang|dated}} [[drunk]]; [[tipsy]] <!--Webster 1913-->
 # {{NZ}} Intoxicated as a result of drugs or alcohol.
 
 ====Derived terms====
