--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -65,7 +65,7 @@
 
 # [[is]]; to [[be]]
 #: {{Hans|[[泰晤士河]][[是]][[英国]][[第二]][[长]][[的]][[河流]]。}}
-#: [[Tàiwùshì Hé]] [[shì]] [[Yīngguó]] [[dì-èr]] [[cháng]] [[de]] [[héliú]].
+#: [[Tàiwùshì Hé]] [[shì]] [[Yīngguó]] [[dì]] [[èr]] [[cháng]] [[de]] [[héliú]].
 #:: The River Thames is the second longest river in the UK.
 
 [[Category:Mandarin entries with audio links]]
