--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -59,7 +59,7 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 {{trans-mid}}
 * Latvian: [[piem.]] {{qualifier|[[piemēram]]}}
 * Lithuanian: [[pvz.]] {{qualifier|[[pavyzdžiui]]}}
-* Lojban: {{t|jbo|mu'u}}
+* Lojban: {{t|jbo|mu'u}}, {{t|jbo|mu'a}}
 * Norwegian: {{t|no|f.eks.}} {{qualifier|{{t|no|for eksempel}}}}, {{t|no|t.d.}} {{qualifier|{{t|no|til dømes}}}}
 * Persian: [[براي مثال]]
 * Polish: [[np.]] {{qualifier|[[na]] [[przykład]]}}
