--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -24,6 +24,7 @@
 
 ====Translations====
 {{trans-see|olive tree}}
+
 {{trans-top|fruit}}
 * Afrikaans: {{t-|af|olyf}}
 * Arabic: {{t-|ar|زيتون|tr=zaytūn}}
@@ -32,8 +33,8 @@
 *: Syriac: {{tø|arc|ܙܝܬܐ|tr=zaytā, zayto|m}}
 * Armenian: {{t-|hy|ձիթապտուղ|tr=jit’aptuġ}}, {{qualifier|colloquially}} {{t-|hy|զեյթուն|tr=zeyt’un}}
 * Aromanian: {{t-|rup|masinã|f}}
-* Azeri: {{t+|az|zeytun|xs=Azeri}}
-* {{trreq|Bulgarian}}
+* Azeri: {{t+|az|zeytun}}
+* {{trreq|bg}}
 * Catalan: {{t-|ca|oliva|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|橄欖}}, {{t|cmn|橄榄|tr=gǎnlǎn}}
@@ -42,7 +43,7 @@
 * Dalmatian: {{tø|dlm|olea|f}}
 * Danish: {{t-|da|oliven}}
 * Dutch: {{t+|nl|olijf|m}}
-* Esperanto: {{t-|eo|olivo|xs=Esperanto}}
+* Esperanto: {{t-|eo|olivo}}
 * Estonian: {{t-|et|Õlip}}
 * Finnish: {{t+|fi|oliivi}}
 * French: {{t+|fr|olive|f}}
@@ -51,13 +52,13 @@
 * Georgian: {{t-|ka|ზეთისხილი|tr=zet'isxili|sc=Geor}}
 * German: {{t+|de|Olive|f}}
 * Greek: {{t+|el|ελιά|f|tr=eliá}}
-* Hausa: {{t-|ha|zaitun|xs=Hausa}}
+* Hausa: {{t-|ha|zaitun}}
 * Hebrew: {{t+|he|זית|tr=zait}}
-* Hindi: {{t-|hi|ज़ैतून|tr=zaitūn|xs=Hindi}}
+* Hindi: {{t-|hi|ज़ैतून|tr=zaitūn}}
 * Icelandic: {{t+|is|ólífa|f}}
 * Ido: {{t+|io|olivo}}
 {{trans-mid}}
-* Indonesian: {{t+|id|zaitun|xs=Indonesian}}
+* Indonesian: {{t+|id|zaitun}}
 * Italian: {{t+|it|oliva|m}}
 * Japanese: {{t-|ja|オリーブ|tr=orību}}
 * Korean: {{t-|ko|올리브|tr=ollibeu}}
@@ -69,7 +70,7 @@
 * Maltese: {{t-|mt|żebbuġa|f}}
 * Norwegian: {{t-|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
-* Persian: {{t+|fa|زیتون|xs=Persian}}
+* Persian: {{t+|fa|زیتون}}
 * Polish: {{t+|pl|oliwka}}
 * Portuguese: {{t+|pt|azeitona|f}}, {{t-|pt|oliva|f}}
 * Romanian: {{t+|ro|măslină|f}}, {{t+|ro|olivă|f}}
@@ -100,7 +101,7 @@
 * Kurdish: {{t|ku|darzeytûn|f}}, {{t|ku|zeytûn|f}}
 * Macedonian: {{t-|mk|маслиновина|f|tr=maslinóvina}}
 {{trans-mid}}
-* Maltese: {{t-|mt|żebbuġ|xs=Maltese}}
+* Maltese: {{t-|mt|żebbuġ}}
 * Russian: {{t+|ru|олива|f|tr=olíva}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|маслиновинa|f|sc=Cyrl}}
@@ -119,7 +120,7 @@
 * Japanese: {{t-|ja|オリーブ色|tr=orību-iro)
 * Korean: {{t-|ko|올리브색}}
 * Kurdish: {{t|ku|zeytûnî}}, {{t|ku|rengzeytûnî}}
-* Persian: {{fa-Arab|[[رنگ]] [[زیتونی]]}} (rang zaitūni), {{t+|fa|زیتونی|tr=zeytōni|xs=Persian}}
+* Persian: {{fa-Arab|[[رنگ]] [[زیتونی]]}} (rang zaitūni), {{t+|fa|زیتونی|tr=zeytōni}}
 {{trans-mid}}
 * Polish: {{t+|pl|oliwkowy|f}}
 * Portuguese: [[verde-oliva]] {{m}}
