--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -120,6 +120,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Welsh: {{t+|cy|bola|xs=Welsh}}
 * West Frisian: [[mage]]
 * Wiradhuri: [[binji]]
+* Zulu: {{t|zu|isisu}}
 {{trans-bottom}}
 
 {{trans-top|belly}}
@@ -190,6 +191,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Urdu: {{t-|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|bụng}}
 * Volapük: {{t+|vo|bälid}}
+* Zulu: {{t|zu|isisu}}
 {{trans-bottom}}
 
 {{trans-see|pride, haughtiness|haughtiness}}
