--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -19,7 +19,7 @@
 {{en-adj|?}}
 
 # {{context|Mid-Ulster}} [[great|Great]], [[wonderful]]
-#: {{usex|That kebab was lies!|lang=en}}
+#: {{usex|That kebab was '''lies'''!|lang=en}}
 
 ===Anagrams===
 * [[isle#English|isle]]
