t+da:[[Staten Israel]] ([[WT:EDIT|Assisted]]) <Israel#18021168>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -53,7 +53,7 @@ From {{etyl|he}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yisra'
 *: Mandarin: {{t-|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
 * Croatian: {{t+|hr|Izrael|m}}
 * Czech: {{t+|cs|Izrael}}
-* Danish: {{t+|da|Israel}}
+* Danish: {{t+|da|Israel}}, {{t|da|Staten Israel}}
 * Dutch: {{t+|nl|Israël|n}}
 * Dzongkha: {{t-|dz|ཨིཛ་རཱེལ་|sc=Tibt}}
 * Esperanto: {{t-|eo|Israelo|xs=Esperanto}}, {{t-|eo|Izraelo|xs=Esperanto}}
