--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɛlt}}
 
 ===Etymology 1===
-{{etyl|ang}} {{term|felt|lang=ang}}, from {{proto|Germanic|feltaz}} (compare {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{proto|Indo-European|pilto||pilso}} 'felt' (compare {{etyl|la|-}} {{term|pilleus|lang=la}} 'felt' (adj.), {{etyl|cu|-}} {{term||plŭstĭ}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, Ancient Greek {{term|πῖλος|tr=pilos|lang=grc|sc=polytonic}}), from *''pel-'' 'to beat'. More at [[anvil]].
+{{etyl|ang}} {{term|felt|lang=ang}}, from {{proto|Germanic|feltaz}} (compare {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{proto|Indo-European|pilto||pilso}} 'felt' (compare {{etyl|la|-}} {{term|pilleus|lang=la||felt}} (adj.), {{etyl|cu|-}} {{term||plŭstĭ|lang=cu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, Ancient Greek {{term|πῖλος|tr=pilos|lang=grc|sc=polytonic}}), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
 {{wikipedia}}
@@ -24,7 +24,7 @@
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
-* Bosnian: {{t-|bs|pust|m}}, {{t-|bs|filc|m}}
+* Asturian: {{t|ast|fieltru|m}}
 * Bulgarian: {{t-|bg|филц|m|tr=filts|sc=Cyrl}}
 * Catalan: {{t-|ca|feltre|m}}
 * Chinese:
@@ -35,6 +35,7 @@
 * Esperanto: {{t-|eo|felto|xs=Esperanto}}
 * Finnish: {{t+|fi|huopa}}
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
+* Galician: {{t|gl|feltro|m}}
 * German: {{t+|de|Filz|n}}
 {{trans-mid}}
 * Greek: {{t+|el|κετσές|m|tr=ketsés|sc=Grek}}
@@ -44,20 +45,24 @@
 * Japanese: {{t-|ja|フェルト|tr=feruto|sc=Jpan}}, {{t-|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
 * Luxembourgish: {{t-|lb|Filz|m}}
 * Norwegian: {{t+|no|filt|m}}
+* Portuguese: {{t|pt|feltro|m}}
 * Russian: {{t+|ru|фетр|m|tr=fetr|sc=Cyrl}}, {{t+|ru|войлок|m|tr=vójlok|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|пуст|m}}, {{t|sh|филц|m}}
+*: Roman: {{t|sh|pust|m}}, {{t|sh|filc|m}}
 * Spanish: {{t-|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
 * Turkish: {{t+|tr|aba}}, {{t+|tr|keçe}}, {{t+|tr|fötr}}, {{t+|tr|kiyiz}}
 {{trans-bottom}}
 
 {{trans-top|hat made of felt}}
-* Bosnian: {{t-|bs|pusteni šešir|m}}
 * Bulgarian: {{t-|bg|филцова шапка|f|tr=filtsova shapka|sc=Cyrl}}
 * Danish: {{t-|da|filthat|c}}
 * Finnish: {{t+|fi|huopahattu}}
 {{trans-mid}}
-* German: [[Filzhut]] {{m}}
+* German: {{t|de|Filzhut|m}}
 * Norwegian: {{t-|no|filthatt|m}}
+* Serbo-Croatian: {{t|sh|pusteni šešir|m}}
 * Turkish: {{t+|tr|fötr}}
 {{trans-bottom}}
 
@@ -89,6 +94,7 @@
 
 {{checktrans}}
 * {{ttbc|sv}}: [[filta]]
+{{trans-bottom}}
 
 ===Etymology 2===
 {{etyl|ang}} {{term|feled|fēled}}, corresponding to {{suffix|feel|ed}}.
