--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -76,7 +76,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Volapük: {{t+|vo|mid}}
 * Walloon: {{t-|wa|tchå|xs=Walloon}}
 * Welsh: {{t+|cy|cnawd|xs=Welsh}}
-* Zulu: {{t|zu|inyama}}
+* Zulu: {{t|zu|inyama|c9|c10}}
 {{trans-bottom}}
 
 {{trans-top|animal tissue as food}}
@@ -98,7 +98,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Swahili: {{t+|sw|kinofu|xs=Swahili}}
 * Swedish: {{t+|sv|kött|n}}
 * Tok Pisin: {{t-|tpi|mit}}
-* Zulu: {{t|zu|inyama}}
+* Zulu: {{t|zu|inyama|c9|c10}}
 {{trans-bottom}}
 
 {{trans-top|human body entity}}
