--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -54,6 +54,7 @@
 * {{ja-readings|on=[[さん]] ([[san]])|kun=[[かさ]] ([[kasa]])}}
 
 ====Compounds====
+* {{term|日傘||parasol|tr=ひがさ, higasa|sc=Jpan|lang=ja}}
 * [[傘屋]]
 * [[傘下]]
 * [[傘形碍子]]
